Alinged items center, justified space-between. Added in 2x additional classes to separate the html elements (.left & .right). The notification button wouldn't align properly on the vertical axis, so I set it to 'align-self: center;, which corrected the issue.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,26 @@ body {
 }
 
 .header {
+  display: flex;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  align-items: flex-end;
+  gap: 16px;
 }
 
 .profile-image {
@@ -35,6 +52,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  align-self: center;
 }
 
 a {
@@ -45,4 +63,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  align-self; left: 
 }
